Bug 1033917 - [Rocketbar][RTL] Vertical Homescreen E.me search input should be right aligned in RTL locales

--- a/apps/verticalhome/style/css/search.css
+++ b/apps/verticalhome/style/css/search.css
@@ -22,7 +22,7 @@
 #search-input {
   margin: 0;
   padding: 0;
-  margin-left: 1.5rem;
+  -moz-margin-start: 1.5rem;
   background: none;
   font-size: 1.8rem;
   border: none;
@@ -49,4 +49,16 @@
   background-repeat: no-repeat;
   background-size: 2rem;
   background-position: center right;
+}
+
+/* RTL View */
+html[dir="rtl"] #search-input {
+  text-align: right;
+  padding-right: .1rem;
+}
+
+html[dir="rtl"] #search-form::after {
+  left: unset;
+  right: 0;
+  background-position: center left;
 }
